Switch Google Sheets auth to base64 env variable